--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="KALENDAR">
     <meta name="author" content="LoadChange">
-    <title>Checkout example for Bootstrap</title>
+    <title>Kalendar Demo</title>
     <link href="https://cdn.bootcss.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
     <style>
         td {
@@ -24,7 +24,7 @@
         }
 
         .table {
-            min-height: 400px;
+            min-height: 539px;
         }
 
         table td.sold-out {
@@ -38,7 +38,7 @@
         }
 
         .table-container {
-            height: 466px;
+            height: 540px;
             overflow: scroll;
         }
     </style>
@@ -103,8 +103,8 @@
     <footer class="my-5 pt-5 text-muted text-center text-small">
         <p class="mb-1">&copy; 2017-2018 kalendar</p>
         <ul class="list-inline">
-            <li class="list-inline-item"><a href="#">GitHub</a></li>
-            <li class="list-inline-item"><a href="#">NPM</a></li>
+            <li class="list-inline-item"><a href="https://github.com/loadchange/kalendar">GitHub</a></li>
+            <li class="list-inline-item"><a href="https://www.npmjs.com/package/kalendar">NPM</a></li>
             <li class="list-inline-item"><a href="#">Introduce</a></li>
         </ul>
     </footer>
@@ -144,7 +144,7 @@
     function render() {
 
         var testKey = getChinaStandard(date, true)
-        var testConf = {flow: 'high'}
+        var testConf = {flow: 'high', price: 750}
         var rand = 0
         var i = 0
         for (; i < 5; i++) {
@@ -157,9 +157,7 @@
             rand = Math.floor(Math.random() * 27 + 1);
             mount[`${testKey}-${rand < 10 ? '0' : ''}${rand}`] = testConf
         }
-
         monthTable = Kalendar.monthly({date: date, mount: mount, unifiedMount: unifiedMount})
-
         monthText.innerHTML = getChinaStandard(date, true)
         var html = []
         monthTable.forEach(week => {
@@ -183,12 +181,14 @@
     render()
 
     document.getElementById('previous').onclick = function () {
-        date.setMonth(date.getMonth() - 1)
+        var month = date.getMonth() - 1
+        date.setMonth(month, 1)
         render()
     }
 
     document.getElementById('next').onclick = function () {
-        date.setMonth(date.getMonth() + 1)
+        var month = date.getMonth() + 1
+        date.setMonth(month, 1)
         render()
     }
 
@@ -198,7 +198,6 @@
     }
 
     var kalendar2 = new Kalendar()
-    console.log(kalendar2)
     var html2 = []
     for (var dateText in kalendar2) {
         html2.push('<tr align="center" class="table-success">')
