refactor: perfect index

--- a/index.html
+++ b/index.html
@@ -41,11 +41,19 @@
             height: 540px;
             overflow: scroll;
         }
+
+        .github-link {
+            position: absolute;
+            top: 0;
+            right: 0;
+        }
     </style>
 </head>
 
 <body class="bg-light">
-
+<a href="https://github.com/loadchange/kalendar" class="github-link" target="_blank">
+    <img src="./github.png"/>
+</a>
 <div class="container">
     <div class="py-5 text-center">
         <h2>Kalendar Demo</h2>
@@ -103,9 +111,9 @@
     <footer class="my-5 pt-5 text-muted text-center text-small">
         <p class="mb-1">&copy; 2017-2018 kalendar</p>
         <ul class="list-inline">
-            <li class="list-inline-item"><a href="https://github.com/loadchange/kalendar">GitHub</a></li>
-            <li class="list-inline-item"><a href="https://www.npmjs.com/package/kalendar">NPM</a></li>
-            <li class="list-inline-item"><a href="#">Introduce</a></li>
+            <li class="list-inline-item"><a href="https://github.com/loadchange/kalendar" target="_blank">GitHub</a></li>
+            <li class="list-inline-item"><a href="https://www.npmjs.com/package/kalendar" target="_blank">NPM</a></li>
+            <li class="list-inline-item"><a href="https://juejin.im/post/5b8e45bfe51d4538c77ab90e" target="_blank">JUEJIN.IM</a></li>
         </ul>
     </footer>
 
