--- a/index.html
+++ b/index.html
@@ -7,52 +7,12 @@
     <meta name="author" content="LoadChange">
     <title>Kalendar Demo</title>
     <link href="https://cdn.bootcss.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        td {
-            cursor: pointer;
-            user-select: none;
-        }
-
-        #previous:hover, #next:hover {
-            color: #cddc39;
-        }
-
-        tbody td:hover {
-            opacity: .7;
-            transform: scale(1.03);
-            transition: all 1s;
-        }
-
-        .table {
-            min-height: 539px;
-        }
-
-        table td.sold-out {
-            background-color: #c6c8ca;
-            cursor: not-allowed;
-        }
-
-        .modal-content {
-            font-size: 36px;
-            text-align: center;
-        }
-
-        .table-container {
-            height: 540px;
-            overflow: scroll;
-        }
-
-        .github-link {
-            position: absolute;
-            top: 0;
-            right: 0;
-        }
-    </style>
+    <link href="./static/main.css">
 </head>
 
 <body class="bg-light">
 <a href="https://github.com/loadchange/kalendar" class="github-link" target="_blank">
-    <img src="./github.png"/>
+    <img src="./images/github.png" />
 </a>
 <div class="container">
     <div class="py-5 text-center">
@@ -111,9 +71,11 @@
     <footer class="my-5 pt-5 text-muted text-center text-small">
         <p class="mb-1">&copy; 2017-2018 kalendar</p>
         <ul class="list-inline">
-            <li class="list-inline-item"><a href="https://github.com/loadchange/kalendar" target="_blank">GitHub</a></li>
+            <li class="list-inline-item"><a href="https://github.com/loadchange/kalendar" target="_blank">GitHub</a>
+            </li>
             <li class="list-inline-item"><a href="https://www.npmjs.com/package/kalendar" target="_blank">NPM</a></li>
-            <li class="list-inline-item"><a href="https://juejin.im/post/5b8e45bfe51d4538c77ab90e" target="_blank">JUEJIN.IM</a></li>
+            <li class="list-inline-item"><a href="https://juejin.im/post/5b8e45bfe51d4538c77ab90e" target="_blank">JUEJIN.IM</a>
+            </li>
         </ul>
     </footer>
 
@@ -128,104 +90,7 @@
 <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.slim.min.js"></script>
 <script src="https://cdn.bootcss.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="./dist/kalendar.js"></script>
-<script>
-    function getChinaStandard(date, streamline) {
-        let month = date.getMonth() + 1
-        let day = date.getDate()
-        month = `${month < 10 ? '0' : ''}${month}`
-        day = `${day < 10 ? '0' : ''}${day}`
-        const arr = streamline ? [date.getFullYear(), month] : [date.getFullYear(), month, day]
-        return arr.join('-')
-    }
-
-    var unifiedMount = {
-        total: 1000,
-        price: 550,
-        bg: 'info'
-    }
-
-    var date = new Date()
-    var mount = {}
-    var monthTable = {}
-    var monthText = document.getElementById('month-text')
-
-    function render() {
-
-        var testKey = getChinaStandard(date, true)
-        var testConf = {flow: 'high', price: 750}
-        var rand = 0
-        var i = 0
-        for (; i < 5; i++) {
-            rand = Math.floor(Math.random() * 27 + 1);
-            mount[`${testKey}-${rand < 10 ? '0' : ''}${rand}`] = testConf
-        }
-
-        testConf = {total: 0}
-        for (i = 0; i < 3; i++) {
-            rand = Math.floor(Math.random() * 27 + 1);
-            mount[`${testKey}-${rand < 10 ? '0' : ''}${rand}`] = testConf
-        }
-        monthTable = Kalendar.monthly({date: date, mount: mount, unifiedMount: unifiedMount})
-        monthText.innerHTML = getChinaStandard(date, true)
-        var html = []
-        monthTable.forEach(week => {
-            html.push('<tr align="center">')
-            week.forEach(date => {
-                let css = []
-                const prefix = 'table-'
-                if (date) {
-                    if (date.bg) css.push(`${prefix}${date.bg}`)
-                    if ([0, 6].indexOf(date.day) >= 0) css.push('bg-warning')
-                    if (date.flow === 'high') css.push('bg-danger')
-                    if (date.total === 0) css.push(`sold-out`)
-                }
-                html.push(`<td class="${css.join(' ')}"${date ? ` onclick="clickDate('${date.dateText}')"` : ''}>${date ? (`${date.date}<br />￥${date.price}`) : ''}</td>`)
-            })
-            html.push('</tr>')
-        })
-        document.getElementById('main-body').innerHTML = html.join('')
-    }
-
-    render()
-
-    document.getElementById('previous').onclick = function () {
-        var month = date.getMonth() - 1
-        date.setMonth(month, 1)
-        render()
-    }
-
-    document.getElementById('next').onclick = function () {
-        var month = date.getMonth() + 1
-        date.setMonth(month, 1)
-        render()
-    }
-
-    function clickDate(dateText) {
-        $('.modal-content').html(dateText)
-        $('#myModal').modal('show')
-    }
-
-    var kalendar2 = new Kalendar()
-    var html2 = []
-    for (var dateText in kalendar2) {
-        html2.push('<tr align="center" class="table-success">')
-        html2.push(`<td colspan="7">${dateText}</td>`)
-        html2.push('</tr>')
-        kalendar2[dateText].forEach(week => {
-            html2.push('<tr align="center">')
-            week.forEach(day => {
-                html2.push(`<td>${day ? day.date : ''}</td>`)
-            })
-            if (week.length < 7) {
-                for (var i = 0; i < 7 - week.length; i++) {
-                    html2.push('<td></td>')
-                }
-            }
-            html2.push('</tr>')
-        })
-    }
-    $('#main-body2').html(html2.join(''))
-</script>
+<script src="./static/main.js"></script>
 
 </body>
 </html>
