docs: Fixed style error

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="description" content="KALENDAR">
     <meta name="author" content="LoadChange">
     <title>Kalendar Demo</title>
-    <link href="https://cdn.bootcss.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
-    <link href="./static/main.css">
+    <link href="https://cdn.bootcss.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="./static/main.css" rel="stylesheet" />
 </head>
 
 <body class="bg-light">
@@ -49,9 +49,9 @@
             <table class="table table-bordered table-dark">
                 <thead>
                 <tr align="center">
-                    <td colspan="2" id="previous">Previous</td>
+                    <td colspan="2" class="finger" id="previous">Previous</td>
                     <td colspan="3" id="month-text"></td>
-                    <td colspan="2" id="next">Next</td>
+                    <td colspan="2" class="finger" id="next">Next</td>
                 </tr>
                 <tr align="center">
                     <td>SUN</td>
