--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         </div>
         <div class="col-md-7 order-md-1">
             <h4 class="mb-3">Kalendar.monthly</h4>
+            <button type="button" class="btn btn-dark continuous-btn">Primary</button>
             <table class="table table-bordered table-dark">
                 <thead>
                 <tr align="center">
