fix: index.html

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.slim.min.js"></script>
 <script src="https://cdn.bootcss.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="./dist/kalendar.js"></script>
+<script src="./dist/kalendar.umd.js"></script>
 <script src="./static/main.js"></script>
 
 </body>
