--- a/index.html
+++ b/index.html
@@ -1,97 +1,24 @@
 <!doctype html>
-<html lang="zh_CN">
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="KALENDAR">
-    <meta name="author" content="LoadChange">
-    <title>Kalendar Demo</title>
-    <link href="https://cdn.bootcss.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="./static/main.css" rel="stylesheet" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kalendar Demo with Vue</title>
+    <!-- Include Vue library -->
+    <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
+    <!-- Include Axios for HTTP requests -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        /* Custom styles */
+    </style>
 </head>
-
-<body class="bg-light">
-<a href="https://github.com/loadchange/kalendar" class="github-link" target="_blank">
-    <img src="./images/github.png" />
-</a>
-<div class="container">
-    <div class="py-5 text-center">
-        <h2>Kalendar Demo</h2>
-        <p class="lead">Kalendar can quickly build a complex calendar that can be applied to many scenarios, such as:
-            tourist attraction ticket booking, plane ticket booking, train ticket booking, room hotel booking, etc.
-            Below is a ticket price to demonstrate the power of Kalendar.</p>
+<body>
+    <div id="app">
+        <calendar-component></calendar-component>
     </div>
 
-    <div class="row">
-        <div class="col-md-5 order-md-2 mb-4">
-            <h4 class="d-flex justify-content-between align-items-center mb-3">
-                <span class="text-muted">new Kalendar()</span>
-            </h4>
-            <div class="table-container">
-                <table class="table table-bordered">
-                    <thead>
-                    <tr align="center">
-                        <td>SUN</td>
-                        <td>MON</td>
-                        <td>TUE</td>
-                        <td>WED</td>
-                        <td>THU</td>
-                        <td>FRI</td>
-                        <td>SAT</td>
-                    </tr>
-                    </thead>
-                    <tbody id="main-body2"></tbody>
-                </table>
-            </div>
-        </div>
-        <div class="col-md-7 order-md-1">
-            <h4 class="mb-3">Kalendar.monthly</h4>
-            <button type="button" class="btn btn-dark continuous-btn">Primary</button>
-            <table class="table table-bordered table-dark">
-                <thead>
-                <tr align="center">
-                    <td colspan="2" class="finger" id="previous">Previous</td>
-                    <td colspan="3" id="month-text"></td>
-                    <td colspan="2" class="finger" id="next">Next</td>
-                </tr>
-                <tr align="center">
-                    <td>SUN</td>
-                    <td>MON</td>
-                    <td>TUE</td>
-                    <td>WED</td>
-                    <td>THU</td>
-                    <td>FRI</td>
-                    <td>SAT</td>
-                </tr>
-                </thead>
-                <tbody id="main-body"></tbody>
-            </table>
-        </div>
-    </div>
-
-    <footer class="my-5 pt-5 text-muted text-center text-small">
-        <p class="mb-1">&copy; 2017-2018 kalendar</p>
-        <ul class="list-inline">
-            <li class="list-inline-item"><a href="https://github.com/loadchange/kalendar" target="_blank">GitHub</a>
-            </li>
-            <li class="list-inline-item"><a href="https://www.npmjs.com/package/kalendar" target="_blank">NPM</a></li>
-            <li class="list-inline-item"><a href="https://juejin.im/post/5b8e45bfe51d4538c77ab90e" target="_blank">JUEJIN.IM</a>
-            </li>
-        </ul>
-    </footer>
-
-    <div id="myModal" class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog"
-         aria-labelledby="mySmallModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-sm">
-            <div class="modal-content"></div>
-        </div>
-    </div>
-</div>
-
-<script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.slim.min.js"></script>
-<script src="https://cdn.bootcss.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="./dist/kalendar.umd.js"></script>
-<script src="./static/main.js"></script>
-
+    <!-- Include the compiled Vue component -->
+    <script src="./dist/build.js"></script>
 </body>
 </html>
